--- a/resources/css/scss/base/_typography.scss
+++ b/resources/css/scss/base/_typography.scss
@@ -31,6 +31,10 @@ h1, h2, h3, h4, h5, h6{
     font-family: $heading-font-family;
     line-height:1.4;
     margin-bottom: 15px;
+
+    &.normal {
+        font-weight: 400;
+    }
 }
 h4, h5, h6{
     font-family: $body-font-family;
@@ -91,7 +95,7 @@ h6{
     }
 
     h1{
-        font-size: 32px;
+        font-size: 50px;
     }
     h2{
         font-size: 26px;
@@ -110,7 +114,7 @@ img{
 }
 
 p{
-    line-height: 1.6;
+    line-height: 1.3;
     margin-bottom: 20px; 
     &.large {
         font-size: 20px;
