--- a/resources/css/scss/pages/_home.scss
+++ b/resources/css/scss/pages/_home.scss
@@ -136,7 +136,7 @@
 	}
 
 	@include media(max-width, 1023px) {
-		padding: 0;
+		
 		min-height: 100%;
 
 		.hero-caption {
@@ -643,7 +643,7 @@
 		&:after {
 			content: url(../img/icon/icn-separator-vert.svg);
 			position: absolute;
-			right: 50px;
+			right: 0;
 			top: 35%;
 		}
 
