--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -1,5 +1,164 @@
 
 
 .section {
-    padding: 60px 0;
+    padding: 80px 0;
+
+}
+
+.section_hero,
+.section_bg {
+    .wp-block-cover__inner-container {
+        
+        max-width: $grid-container;
+        margin-left:auto;
+        margin-right:auto;
+
+        .hero-caption{
+            padding: 130px 0 50px !important;
+        }
+
+    }
+}
+
+.section_hero {
+        
+    p.icon_text {   
+        margin-bottom: 0px !important;
+        display: flex;
+        font-size: 20px !important;
+        line-height: 30px !important;
+        text-transform: uppercase;
+        
+        img {
+            margin-right: 40px
+        }
+    }
+}
+
+.wp-block-image {
+    margin: 0 !important;
+}
+
+.wp-block-group__inner-container {
+	max-width: $grid-container;
+	padding-left:0;
+	padding-right: 0;
+	margin-left:auto;
+	margin-right:auto;
+    
+        
+    @include media(max-width, 1440px){
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    
+}
+.wp-block-group__inner-container .wp-block-group__inner-container {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.wp-block-column {
+    > .wp-block-group {
+        > .wp-block-group__inner-container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
+}
+
+p.icon_text {   
+    margin-bottom: 30px !important;
+    display: flex;
+    align-items: center;
+    
+    img {
+        margin-right: 30px
+    }
+}
+
+.wp-block-separator {
+    &.primary {
+        color: $color-dblue !important;
+        margin: 30px 0;
+    }
+}
+
+.wp-block-image {
+    &.penta {
+
+        figure {
+            position:relative;
+
+            &:before {
+                content: url('../img/icon/icn-corner.svg');
+                position: absolute;
+                left: 0;
+                top:0;
+            }
+
+        }
+
+        &.left {
+
+            figure {
+    
+                &:before {
+                    left: 0;
+                }    
+            }
+        }
+
+        &.right {
+
+            figure {
+    
+                &:before {
+                    right: 0;
+                }    
+            }
+        }
+
+    }
+}
+
+.penta_bg {
+    position: relative;
+}
+
+.pentagon {
+        
+    position: absolute;
+    top:0;
+    right: auto;
+    left: 0;
+
+    &.left {
+        right: auto;
+        left: 0;
+    }
+
+    &.right {
+        right: 0;
+        left: auto;
+        transform: scaleX(-1);
+    }
+
+}
+
+.cta_icon {
+    position: relative;
+
+    .wp-block-buttons {
+        position: absolute;
+        bottom: -40px;
+        left: 50px;
+    
+    }
+}
+
+.icn_separator {
+    position: absolute;
+    right: 50px;
+    top: 35%;
 }
