--- a/resources/css/scss/base/_typography.scss
+++ b/resources/css/scss/base/_typography.scss
@@ -13,6 +13,7 @@ body{
     color: $color-grey;
     font-weight: 300;
     overflow-x: hidden;
+    font-style:normal;
 }
 
 
@@ -81,7 +82,7 @@ h6{
     }
 
 }
-@include media(max-width, 1023px){
+@include media(max-width, 1200px){
     body{
         font-size: $body-font-size * 0.9;
     }
@@ -114,7 +115,7 @@ img{
 }
 
 p{
-    line-height: 1.3;
+    line-height: 1.6;
     margin-bottom: 20px; 
     &.large {
         font-size: 20px;
