--- a/resources/css/scss/pages/_home.scss
+++ b/resources/css/scss/pages/_home.scss
@@ -451,9 +451,9 @@
 			margin: 0 auto;
 			
 			li {
-				margin-right: 5px;
+				margin-right: 5px !important;
 				i.fa-star {
-					font-size: 11px;
+					font-size: 12px;
 				}
 			}
 		}
