--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -20,9 +20,17 @@
     }
 }
 
+.section_services_bottom {
+
+    .button {
+        padding: 0 !important;
+        min-width: auto !important;
+    }
+}
+
 .section_hero {
         
-    p.icon_text {   
+    .icon_text {   
         margin-bottom: 0px !important;
         display: flex;
         font-size: 20px !important;
@@ -33,10 +41,25 @@
             margin-right: 40px
         }
     }
+
+    .logos {
+        position: relative;
+        bottom: -40px;
+    }
 }
 
 .wp-block-image {
     margin: 0 !important;
+}
+
+.alignfull {
+    .wp-block-group__inner-container {
+        max-width: 100% !important;
+    }
+}
+
+.hero_subtitle {
+    letter-spacing: 0.2em;
 }
 
 .wp-block-group__inner-container {
@@ -75,6 +98,10 @@ p.icon_text {
     img {
         margin-right: 30px
     }
+}
+
+.contact_num {
+    letter-spacing: 0.1em;
 }
 
 .wp-block-separator {
@@ -161,4 +188,44 @@ p.icon_text {
     position: absolute;
     right: 50px;
     top: 35%;
+}
+
+.icon_block {
+    .wp-block-media-text__content {
+        padding: 0 !important;
+    }
+    .wp-block-media-text__media {
+        img {
+            width: 18px;
+            
+        }
+    }
+
+    &.icn_map {
+        .wp-block-media-text__media {
+            img {
+                width: 18px;
+                
+            }
+        }
+    }
+
+    &.icn_phone {
+        .wp-block-media-text__media {
+            img {
+                width: 14px;
+                
+            }
+        }
+    }
+
+    &.icn_email {
+        .wp-block-media-text__media {
+            img {
+                width: 19px;
+                
+            }
+        }
+    }
+
 }
