--- a/resources/css/scss/pages/_contact.scss
+++ b/resources/css/scss/pages/_contact.scss
@@ -76,6 +76,10 @@
             }
         }
     }
+
+    @include media (max-width, 425px){        
+        width: 80%;
+    }
 }
 
 .section_map {
