--- a/resources/css/scss/pages/_inner.scss
+++ b/resources/css/scss/pages/_inner.scss
@@ -1,8 +1,16 @@
-
+.page-content {
+    
+    @include media (max-width, 1023px) {
+        padding: 20px 0;
+    }
+}
 
 .section {
-    padding: 80px 0;
+    padding: 40px 0;
 
+    @include media (max-width, 600px) {
+        padding: 20px 0;
+    }
 }
 
 .section_hero,
@@ -52,12 +60,6 @@
     margin: 0 !important;
 }
 
-.alignfull {
-    .wp-block-group__inner-container {
-        max-width: 100% !important;
-    }
-}
-
 .hero_subtitle {
     letter-spacing: 0.2em;
 }
@@ -71,8 +73,8 @@
     
         
     @include media(max-width, 1440px){
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     
 }
@@ -91,7 +93,7 @@
 }
 
 p.icon_text {   
-    margin-bottom: 30px !important;
+    margin-bottom: 20px !important;
     display: flex;
     align-items: center;
     
@@ -182,6 +184,17 @@ p.icon_text {
         left: 50px;
     
     }
+
+    @include media (max-width, 768px){
+
+        .wp-block-buttons {
+            position: unset;
+
+            .button {
+                width: 100%;
+            }
+        }
+    }
 }
 
 .icn_separator {
@@ -253,4 +266,19 @@ p.icon_text {
         }
     }
 
+}
+
+.services_form {
+    .gform_wrapper {
+
+        @include media (max-width, 1023px){
+            margin: 0 auto;
+        }
+    }
+}
+
+.service_btn.button {
+    @media (max-width: 1023px) and (min-width: 600px) {
+        float: right;
+    }
 }
