--- a/resources/css/scss/base/_buttons.scss
+++ b/resources/css/scss/base/_buttons.scss
@@ -351,8 +351,14 @@
         margin-bottom: 0;
     }
 
+    
+
     @include media(max-width, 480px) {
-        padding: 10px 20px;
+         
+        padding: 10px  !important;
+        font-size: 14px !important;
+        letter-spacing: 0.06em !important;
+        margin-right: 0 !important;
     }
     
 } 
