--- a/resources/css/scss/base/_typography.scss
+++ b/resources/css/scss/base/_typography.scss
@@ -3,6 +3,14 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+     user-select: none;
 }
 
 :focus {outline:0 !important;}
@@ -61,9 +69,31 @@ h6{
     font-size:16px;
 }
 
-@include media(max-width, 1280px){
+@include media(max-width, 1320px){
     h1{
         font-size: 70px;
+    }
+    h2{
+        font-size: 40px;
+    }
+    h3{
+        font-size: 30px;
+    }
+    h4{
+        font-size: 26px;
+    }
+    h5{
+        font-size: 22px;
+    }
+    h6{
+        font-size: 18px;
+    }
+
+}
+
+@include media(max-width, 1280px){
+    h1{
+        font-size: 60px;
     }
     h2{
         font-size: 30px;
@@ -96,16 +126,16 @@ h6{
     }
 
     h1{
-        font-size: 50px;
+        font-size: 40px !important;
     }
     h2{
-        font-size: 26px;
+        font-size: 26px !important;
     }
     h3{
-        font-size:22px;
+        font-size:21px !important;
     }
     h4{
-        font-size:18px;
+        font-size:18px !important;
     }
 }
 
